WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
126737
Clear unparented tiled layers on memory pressure.
https://bugs.webkit.org/show_bug.cgi?id=126737
Summary
Clear unparented tiled layers on memory pressure.
Yongjun Zhang
Reported
2014-01-09 23:04:34 PST
TileController hold unparented for a short period of time (1 -3 sec); we should clear these unparented tiles immediately if we are under memory pressure.
Attachments
Patch, immediately clear unparented tiles under memory pressure.
(19.54 KB, text/plain)
2014-01-09 23:27 PST
,
Yongjun Zhang
no flags
Details
Fix style issues.
(19.51 KB, patch)
2014-01-09 23:31 PST
,
Yongjun Zhang
simon.fraser
: review+
Details
Formatted Diff
Diff
Address review comments before landing.
(18.80 KB, patch)
2014-01-10 11:12 PST
,
Yongjun Zhang
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Yongjun Zhang
Comment 1
2014-01-09 23:05:52 PST
<
rdar://problem/15715238
>
Yongjun Zhang
Comment 2
2014-01-09 23:27:19 PST
Created
attachment 220809
[details]
Patch, immediately clear unparented tiles under memory pressure.
WebKit Commit Bot
Comment 3
2014-01-09 23:28:16 PST
Attachment 220809
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/WebCore.exp.in', u'Source/WebCore/WebCore.xcodeproj/project.pbxproj', u'Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp', u'Source/WebCore/platform/graphics/ca/mac/TileController.h', u'Source/WebCore/platform/graphics/ca/mac/TileController.mm', u'Source/WebCore/platform/ios/TileControllerMemoryHandlerIOS.cpp', u'Source/WebCore/platform/ios/TileControllerMemoryHandlerIOS.h', u'Source/WebKit/mac/ChangeLog', u'Source/WebKit/mac/WebView/WebView.mm', '--commit-queue']" exit_code: 1 ERROR: Source/WebCore/platform/ios/TileControllerMemoryHandlerIOS.h:26: #ifndef header guard has wrong style, please use: TileControllerMemoryHandlerIOS_h [build/header_guard] [5] ERROR: Source/WebCore/platform/ios/TileControllerMemoryHandlerIOS.h:39: The parameter name "controller" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/TileControllerMemoryHandlerIOS.h:40: The parameter name "controller" adds no information, so it should be removed. [readability/parameter_name] [5] ERROR: Source/WebCore/platform/ios/TileControllerMemoryHandlerIOS.h:44: Missing space inside { }. [whitespace/braces] [5] Total errors found: 4 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yongjun Zhang
Comment 4
2014-01-09 23:31:03 PST
Created
attachment 220810
[details]
Fix style issues.
Pratik Solanki
Comment 5
2014-01-09 23:48:36 PST
Comment on
attachment 220810
[details]
Fix style issues. View in context:
https://bugs.webkit.org/attachment.cgi?id=220810&action=review
> Source/WebCore/WebCore.xcodeproj/project.pbxproj:17833 > + };
Odd move by Xcode. Maybe skip this part before commit?
> Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:3032 > + float maxPixelDimension = systemMemoryLevel() < cMemoryLevelToUseSmallerPixelDimension ? cMaxPixelDimensionLowMemory : cMaxPixelDimension;
This should be int since cMaxPixelDimension is int.
Simon Fraser (smfr)
Comment 6
2014-01-10 08:46:51 PST
Comment on
attachment 220810
[details]
Fix style issues. View in context:
https://bugs.webkit.org/attachment.cgi?id=220810&action=review
> Source/WebCore/platform/ios/TileControllerMemoryHandlerIOS.cpp:68 > +void TileControllerMemoryHandler::trimUnparentedTilesToTarget(unsigned target)
Use an int for the argument. Surprising things can happen using unsigned math.
> Source/WebCore/platform/ios/TileControllerMemoryHandlerIOS.h:40 > + void updateForTileController(TileController*);
I think this would be better named tileControllerGainedUnparentedTiles() or similar.
Yongjun Zhang
Comment 7
2014-01-10 11:12:06 PST
Created
attachment 220865
[details]
Address review comments before landing.
WebKit Commit Bot
Comment 8
2014-01-10 14:06:42 PST
Comment on
attachment 220865
[details]
Address review comments before landing. Clearing flags on attachment: 220865 Committed
r161675
: <
http://trac.webkit.org/changeset/161675
>
WebKit Commit Bot
Comment 9
2014-01-10 14:06:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug