Clear unparented tiled layers on memory pressure. https://bugs.webkit.org/show_bug.cgi?id=126737

Patch by Yongjun Zhang <yongjun_zhang@apple.com> on 2014-01-10
Reviewed by Simon Fraser.

Source/WebCore:

TileController hold unparented tiles for a short period of time (1 -3 sec); we should clear these unparented
tiles immediately if we are under memory pressure.

The patch does 3 things to improve the behavior:
1) When the system free memory is low (<35%), reduce the tiling threshold.  This could reduce
the peak memory usage when system is under low memory since we will convert more web layers into
tiled backing.
2) Under memory pressure, immediately clear all unparented tiles.
3) Add a cap (16 tiles) to limit the total number of unparented tiles in TileController's.

* WebCore.exp.in:
* WebCore.xcodeproj/project.pbxproj: Add a new class TileControllerMemoryHandler.
* platform/graphics/ca/GraphicsLayerCA.cpp:
(WebCore::GraphicsLayerCA::requiresTiledLayer):  Use a smaller tiling threshold if the system free memory is low.
* platform/graphics/ca/mac/TileController.h:
(WebCore::TileController::numberOfUnparentedTiles):
* platform/graphics/ca/mac/TileController.mm:
(WebCore::TileController::startedNewCohort):
(WebCore::TileController::removeUnparentedTilesNow): Remove all unparentd tiles.
* platform/ios/MemoryPressureHandlerIOS.mm:
* platform/ios/TileControllerMemoryHandlerIOS.cpp: Added.
(WebCore::TileControllerMemoryHandler::removeTileController):
(WebCore::TileControllerMemoryHandler::totalUnparentedTiledLayers):
(WebCore::TileControllerMemoryHandler::tileControllerGainUnparentedTiles):
(WebCore::TileControllerMemoryHandler::trimUnparentedTilesToTarget): Trims the number of unparented tiles until
    it reaches the target.
(WebCore::tileControllerMemoryHandler):
* platform/ios/TileControllerMemoryHandlerIOS.h: Added.
(WebCore::TileControllerMemoryHandler::TileControllerMemoryHandler):

Source/WebKit/mac:

* WebView/WebView.mm:
(+[WebView _handleMemoryWarning]): Clear all unparented tiles when under memory pressure.

Canonical link: https://commits.webkit.org/144685@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161675 268f45cc-cd09-0410-ab3c-d52691b4dbfc